Fixed navbar spacing problem

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -124,6 +124,10 @@ hr {
   padding: 5px 20px 10px !important;
 }
 
+.clearfix {
+  margin-bottom: 0 !important;
+}
+
 .dashboard footer {
   margin-top: 20px;
   padding-right: 2px;
